--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,7 @@
 
 title: daynix.github.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  GitHub Pages of Daynix Computing Ltd.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://daynix.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: daynix
