--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ domain: daynix.github.io
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default.
