Set a theme for the blog to "architect"
Signed-off-by: Yan Vugenfirer <yan#daynix.com>

Signed-off-by: Yan Vugenfirer <yan@daynix.com>

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username: daynix
 domain: daynix.github.io
 
 # Build settings
-theme: minima
+theme: architect
 plugins:
   - jekyll-feed
   - jekyll-sitemap
