--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username: daynix
 domain: daynix.github.io
 
 # Build settings
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/midnight@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
