Temporary go back to Minima theme
Signed-off-by: Viktor Prutyanov <viktor@daynix.com>

--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,10 @@ github_username: daynix
 domain: daynix.github.io
 
 # Build settings
-remote_theme: pages-themes/modernist@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: minima
 
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
   - jekyll-sitemap
 
